manifests/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: node-update
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kured
  name: kured
  namespace: node-update
spec:
  clusterIP: None
  ports:
  - name: metrics
    port: 8080
    targetPort: metrics
  selector:
    app: kured
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: yumsecupdater
  name: yumsecupdater
  namespace: node-update
spec:
  clusterIP: None
  ports:
  - name: metrics
    port: 9080
    targetPort: metrics
  selector:
    app: yumsecupdater
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: grafana-nodes-updates-tls
  labels:
    app: grafana-nodes-updates
  name: grafana-nodes-updates
  namespace: openshift-monitoring
spec:
  ports:
  - name: https
    port: 3000
    protocol: TCP
    targetPort: https
  selector:
    app: grafana-nodes-updates
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: grafana-nodes-updates
  name: grafana-nodes-updates
  namespace: openshift-monitoring
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: grafana-nodes-updates
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: grafana-nodes-updates
    spec:
      containers:
      - args:
        - -config=/etc/grafana/grafana.ini
        image: registry.redhat.io/openshift3/grafana:v3.11.272
        imagePullPolicy: IfNotPresent
        name: grafana
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 50m
            memory: 50Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-storage
        - mountPath: /etc/grafana/provisioning/datasources
          name: grafana-datasources
          readOnly: true
        - mountPath: /etc/grafana/provisioning/dashboards
          name: grafana-dashboards
        - mountPath: /grafana-dashboard-definitions/0/nodes-updates
          name: grafana-dashboard-nodes-updates
          readOnly: true
        - mountPath: /etc/grafana
          name: grafana-config
          readOnly: true
      - args:
        - -provider=openshift
        - -https-address=:3000
        - -http-address=
        - -email-domain=*
        - -upstream=http://localhost:3001
        - '-openshift-sar={"resource": "namespaces", "verb": "get"}'
        - '-openshift-delegate-urls={"/": {"resource": "namespaces", "verb": "get"}}'
        - -tls-cert=/etc/tls/private/tls.crt
        - -tls-key=/etc/tls/private/tls.key
        - -client-secret-file=/var/run/secrets/kubernetes.io/serviceaccount/token
        - -cookie-secret-file=/etc/proxy/secrets/session_secret
        - -cookie-expire=24h
        - -openshift-service-account=grafana
        - -openshift-ca=/etc/pki/tls/cert.pem
        - -openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
        - -skip-auth-regex=^/metrics
        image: registry.redhat.io/openshift3/oauth-proxy:v3.11.272
        imagePullPolicy: IfNotPresent
        name: grafana-proxy
        ports:
        - containerPort: 3000
          name: https
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/tls/private
          name: secret-grafana-tls
        - mountPath: /etc/proxy/secrets
          name: secret-grafana-proxy
      dnsPolicy: ClusterFirst
      nodeSelector:
        node-role.kubernetes.io/infra: "true"
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: grafana
      serviceAccountName: grafana
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: grafana-storage
      - name: grafana-datasources
        secret:
          defaultMode: 420
          secretName: grafana-datasources
      - configMap:
          defaultMode: 420
          name: grafana-dashboards
        name: grafana-dashboards
      - configMap:
          defaultMode: 420
          name: grafana-dashboard-nodes-updates-584kcmff9h
        name: grafana-dashboard-nodes-updates
      - name: grafana-config
        secret:
          defaultMode: 420
          secretName: grafana-config
      - name: secret-grafana-tls
        secret:
          defaultMode: 420
          secretName: grafana-nodes-updates-tls
      - name: secret-grafana-proxy
        secret:
          defaultMode: 420
          secretName: grafana-proxy
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: kured
  name: kured
  namespace: node-update
spec:
  selector:
    matchLabels:
      app: kured
  template:
    metadata:
      labels:
        app: kured
    spec:
      containers:
      - args:
        - --ds-name=kured
        - --ds-namespace=node-update
        - --period=1h
        - --drain-timeout=10m
        - --skip-wait-for-delete-timeout=600
        - --lock-release-delay=5m
        - --lock-ttl=30m
        - --reboot-days=mo,tu,we,th
        - --start-time=08:00:00
        - --end-time=16:00:00
        command:
        - /usr/bin/kured
        image: myregistry.com/kured:1.7.0
        imagePullPolicy: IfNotPresent
        name: kured
        ports:
        - containerPort: 8080
          name: metrics
        resources: {}
        securityContext:
          privileged: true
      hostPID: true
      restartPolicy: Always
      serviceAccountName: kured
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
  updateStrategy:
    type: RollingUpdate
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: yumsecupdater
  name: yumsecupdater
  namespace: node-update
spec:
  selector:
    matchLabels:
      app: yumsecupdater
  template:
    metadata:
      labels:
        app: yumsecupdater
    spec:
      containers:
      - args:
        - --exclude-packages
        - atomic*,etcd,cri*,docker*,cockpit-*,corosync,kubernetes*,openshift*,origin*
        - --dry-run=true
        image: myregistry.com/yumsecupdater:latest
        imagePullPolicy: Always
        name: yumsecupdater
        ports:
        - containerPort: 9080
          name: metrics
        resources: {}
        securityContext:
          privileged: true
          runAsUser: 0
      hostIPC: true
      hostPID: true
      restartPolicy: Always
      serviceAccountName: yumsecupdater
      terminationGracePeriodSeconds: 300
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
      volumes:
      - hostPath:
          path: /sys/fs/selinux
          type: Directory
        name: selinux
      - hostPath:
          path: /
          type: Directory
        name: host
  updateStrategy:
    type: RollingUpdate
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: grafana-nodes-updates
  name: grafana-nodes-updates
  namespace: openshift-monitoring
spec:
  host: REPLACE_HOST
  port:
    targetPort: https
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: grafana-nodes-updates
    weight: 100
  wildcardPolicy: None
